Another attempt at making this all work - some wierd thing is going wrong when compiling staticobj.AceNode.toURL - the exception is confusing things.
git-svn-id: file:///home/svn-repositories/biojava/biojava-live/trunk@686 7c6358e6-4a41-0410-a743-a5b2a554c398